items/indexのviewファイル修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -140,7 +140,7 @@
             <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price %>円<br><%= %></span>
+            <span><%= item.price %>円<br><%='配送料負担'%></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -162,7 +162,7 @@
             商品を出品してね！
           </h3>
           <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
+            <span>99999999円<br>(税込み<br><%='配送料負担'%></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
