--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,11 +129,11 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-
+          <%if Order.exists?(item_id: item.id)%>
+            <div class='sold-out'>
+              <span>Sold Out!!</span>
+            </div>
+          <%end%>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
