クレジット決済機能の実装

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,10 +31,11 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with  model: @order_item, class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with  model: @order_item,url:item_orders_path(@item.id), class: 'transaction-form-wrap',id:"charge-form",local: true do |f| %>
+    <%=render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
-      <h1 class='info-input-haedline'>
+      <h1 class='info-input-haedline' id='charge-info'>
         クレジットカード情報入力
       </h1>
       <div class="form-group">
