プルリクエストの修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%if Order.exists?(item_id: item.id)%>
+          <%if item.order.exists?%>
             <div class='sold-out'>
               <span>Sold Out!!</span>
             </div>
