--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%if Order.exists?(item_id: @item.id) %>
+      <%if @item.order.exists? %>
         <div class='sold-out'>
           <span>Sold Out!!</span>
         </div>
@@ -23,16 +23,14 @@
       </span>
     </div>
 
-  <%if user_signed_in?%>
-    <%if current_user.id == @item.user_id%>
+    <%if user_signed_in? && current_user.id == @item.user_id%>
       <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class='or-text'>or</p>
       <%= link_to '削除', item_path(@item.id) , method: :delete, class:'item-destroy' %>
-    <%end%>
-    <%if current_user.id != @item.user_id && !Order.exists?(item_id: @item.id)%>
+    <%elsif current_user.id != @item.user_id && !@item.order.exists?%>
        <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn"%>
     <%end%>
-  <%end%>
+
 
     <div class="item-explain-box">
       <span><%= @item.content %></span>
