--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%if item.order.exists?%>
+          <%if item.order.present?%>
             <div class='sold-out'>
               <span>Sold Out!!</span>
             </div>
@@ -178,8 +178,10 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<div class='purchase-btn'>
-  <%= link_to "出品する",new_item_path, class:" purchase-btn-text"%>
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-</div>
+<a class='purchase-btn' href = "/items/new">
+  <span class = "purchase-btn-text">出品する</span>
+  <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+</a>
 <%= render "shared/footer" %>
+
+
